
Mon Jun 4 14:52:17 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* String.cs: optimized CompareOrdinal ().

2007-06-02  Zoltan Varga  <vargaz@gmail.com>

	* MonoCustomAttrs.cs (GetBase): Revert last change as it breaks the build.
	
	* MonoCustomAttrs.cs (GetBase): Handle properties correctly. Fixes #81797.

2007-05-31  Zoltan Varga  <vargaz@gmail.com>

	* Delegate.cs: Add invoke_impl field. Reorder fields for better cache behavior. Add
	SetMulticastDelegate icall.

	* MulticastDelegate.cs (CombineImpl): Call SetMulticastDelegate () on newly created
	delegate.

	* Environment.cs: Bump corlib version.
	
2007-05-25  Jonathan Chambers  <joncham@gmail.com>

	* __ComObject.cs: Add overload to GetInterface to allow
	not throwing exceptions. Fixes as and is operators for COM objects.

2007-05-23  Atsushi Enomoto  <atsushi@ximian.com>

	* Array.cs : reverting Array.cs fixes since the runtime depends on
	  those method attributes.

2007-05-23  Atsushi Enomoto  <atsushi@ximian.com>

	* Int16.cs UInt64.cs UIntPtr.cs Double.cs CrossAppDomainDelegate.cs
	  ResolveEventHandler.cs IntPtr.cs UnhandledExceptionEventHandler.cs
	  Void.cs AssemblyLoadEventHandler.cs SByte.cs UInt16.cs DateTime.cs
	  Byte.cs TimeSpan.cs Decimal.cs Int32.cs Delegate.cs
	  AppDomainInitializer.cs MulticastDelegate.cs Int64.cs
	  EventHandler.cs Single.cs UInt32.cs AsyncCallback.cs :
	  cosmetic attribute fixes (ComVisible/Serializable).

2007-05-22  Atsushi Enomoto  <atsushi@ximian.com>

	* Convert.cs : completed 2.0 (ToBase64CharArray).
	* String.cs : removed MonoTODO.
	* DataMisalignedException.cs : removed extra .ctor().
	* Array.cs : internalize extra members. Fixed reliability contract.

2007-05-17  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : added support for 'K'.

2007-05-11  Jonathan Chambers  <joncham@gmail.com>

	* __ComObject.cs: No need to call CoInitialize anymore since
	Thread.ApartmentState was implemented.

2007-05-11  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #81540
